# e_shop_project

./: .env  .gitignore  Cargo.toml  build.rs  diesel.toml  readme.md
migrations/2024-11-15-215906_eshop_db/: down.sql  metadata.toml  up.sql
migrations/eshop/: down.sql  insert.sql  up.sql
src/: app.rs  main.rs  models.rs  plugins.rs  prelude.rs  resources.rs  schema.rs
src/app/: app_exit.rs  plugin.rs
src/plugins/: business.rs  database.rs  domain.rs  presentation.rs  window.rs
src/plugins/database/: helpers.rs  migrations.rs  schema.rs
src/plugins/window/: eframe_impl.rs  plugin_impl.rs  run_impl.rs  states.rs
src/plugins/window/states/: helpers.rs  login_display.rs  main_display.rs
src/plugins/window/states/main_display/: accounts.rs  cancel_order.rs  orders.rs  products.rs
src/resources/: app.rs  app_builder.rs  build.rs  plugin.rs  run.rs  singleton_map.rs  singleton_resources.rs
